kubernetes/base/apps/admission-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-service
  labels:
    app.kubernetes.io/name: admission-service
    app.kubernetes.io/instance: admission-service
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: hospital-information-system
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: admission-service
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      protocol: TCP
