kubernetes/base/apps/admission-service/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admission-service-netpol
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: admission-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # 1. API Gateway REST HTTP Trafiği
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: api-gateway
      ports:
        - protocol: TCP
          port: 8086
    # 2. Prometheus Monitoring Trafiği
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8086
  egress:
    # 1. CoreDNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # 2. Vault
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vault
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vault
      ports:
        - protocol: TCP
          port: 8200
    # 3. PostgreSQL Database (admission_db)
    - ports:
        - protocol: TCP
          port: 5432
    # 4. Patient Management gRPC İstemcisi
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: patient-management
      ports:
        - protocol: TCP
          port: 9090
    # 5. Doctor Service gRPC İstemcisi
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: doctor-service
      ports:
        - protocol: TCP
          port: 9005
    # 6. Redis Cache
    - ports:
        - protocol: TCP
          port: 6379
    # 7. Kafka Event Bus
    - ports:
        - protocol: TCP
          port: 9092
